fixed modal on small screens

--- a/style.css
+++ b/style.css
@@ -130,8 +130,6 @@ p {
 .modal {
   position: fixed;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .present {
